--- a/main.html
+++ b/main.html
@@ -6,7 +6,40 @@
     <title>Daniel Flores</title>
 </head>
 <body>
-    <h1 id="name">Mi nombre Daniel Flores López estoy titulado </h1>
-
+    <h1 id="name">Mi nombre Daniel Flores López</h1>
+    <h2>Estoy titulado en Administración de Tecnologías de la Información y especializado en programación, principalmente para sitios web. También cuento con experiencia en resolución de problemas y en diversas tareas administrativas.</h2>
+    <div class="contacto">
+        <p>WhatsApp <i>(+52) 5519096802</i></p>
+        <p>GitHub <i href ="https://github.com/danielflores-64">https://github.com/danielflores-64 </i></p>
+    </div>
+    <div>
+        <ul>
+            <li>Organización</li>
+            <li>Autodidácta</li>
+            <li>Resolución de problemas</li>
+            <li>Inglés nivel C1</li>
+            <li>SCRUM</li>
+        </ul>
+    </div>
+    <div class="edu">
+        <ul>
+            <li>
+                <b>Licenciatura en Administración de Tecnologías de la Información</b>
+                </br>
+                <p>Universidad Insurgentes</p>
+                <p>2019-2022</p>
+            </li>
+            <li>
+                <b>Certificado de Freecodecamp</b>
+                <p><i>https://www.freecodec amp.org/espanol/certification/fcc9333bff3- 357a-492eb1ae fe385f1415ea/responsive -web-design </i></p>
+                <p>2022</p>
+            </li>
+            <li>
+                <b>Diplomado de Creación de Videojuegos</b>
+                <p>Platzi</p>
+                <p>2019</p>
+            </li>
+        </ul>
+    </div>
 </body>
 </html>
