--- a/main.html
+++ b/main.html
@@ -2,16 +2,22 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
     <link rel="stylesheet" href="styles.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Daniel Flores</title>
 </head>
 <body>
-    <div class="main">
-        <h1 id="name">Mi nombre Daniel Flores López</h1>
-        <h2>Estoy titulado en Administración de Tecnologías de la Información y especializado en programación, principalmente para sitios web. También cuento con experiencia en resolución de problemas y en diversas tareas administrativas.</h2>
+    <!--<div class="main">-->
+        <div class="titulos">
+            <img src="" alt="Foto Personal">
+            <div>
+                <h1 id="name">Mi nombre Daniel Flores López</h1>
+                <h2>Estoy titulado en Administración de Tecnologías de la Información y especializado en programación, principalmente para sitios web. También cuento con experiencia en resolución de problemas y en diversas tareas administrativas.</h2>
+            </div>
+        </div>
         <div class="contacto">
-            <p>WhatsApp <a>(+52) 5519096802</a></p>
+            <p><i class="bi bi-whatsapp" style="color: green;"></i>WhatsApp <a>(+52) 5519096802</a></p>
             <p>GitHub <a href ="https://github.com/danielflores-64">https://github.com/danielflores-64 </a></p>
         </div>
         <div>
@@ -45,7 +51,7 @@
                     <p>2019</p>
                 </li>
             </ul>
-        </div>
+        <!--</div>-->
     </div>
 </body>
 </html>
